Fixed some z-index shenanigans

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -84,7 +84,7 @@ svg#link-threshold-sparkline{
   height: 100%;
   padding: 10px;
   background: rgba(0, 0, 0, 0.1);
-  z-index: 10000;
+  z-index: 1000;
 }
 .left-pane .nav{
   padding-top: 40px;
@@ -124,7 +124,7 @@ input[type="number"].custom-select{
   position:absolute;
   top: 73px;
   right: 10px;
-  z-index: 1000;
+  z-index: 999;
   max-height: 400px;
   overflow-y:scroll;
   border-radius: 0.25rem;
@@ -148,7 +148,7 @@ input[type="number"].custom-select{
   position: absolute;
   bottom: 10px;
   right: 20px;
-  z-index: 1000;
+  z-index: 999;
   color: #303030;
   background-color: #f8f9fa!important;
   border: 1px solid #c0c0c0;
@@ -169,11 +169,6 @@ input[type="number"].custom-select{
   -moz-appearance: none;
   text-indent: 1px;
   text-overflow: '';
-}
-#hide_stats_context, #hide_group_key_context{
-  display: none;
-  position: fixed;
-  z-index: 2000;
 }
 label[for="apply-style"]{
   width: calc(100% - 30px);
@@ -447,7 +442,7 @@ a.btn, button.btn, .btn-group{
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 10001;
+  z-index: 1001;
 }
 #attributeModal .modal-body{
   max-height: 600px;
